@@ -1,5 +1,5 @@
 /*
- * "$Id: gui.h,v 1.9 1999/11/12 20:15:59 mike Exp $"
+ * "$Id: gui.h,v 1.10 1999/12/11 14:33:20 mike Exp $"
  *
  *   GUI definitions for HTMLDOC, an HTML document processing program.
  *
@@ -154,6 +154,7 @@ class GUI
   Fl_Group	*optionsTab;
   Fl_Input	*htmlEditor;
   Fl_Button	*htmlBrowse;
+  Fl_Value_Slider *browserWidth;
   Fl_Button	*saveOptions;
 
   Fl_Button	*bookSave,
@@ -232,5 +233,5 @@ class GUI
 
 
 /*
- * End of "$Id: gui.h,v 1.9 1999/11/12 20:15:59 mike Exp $".
+ * End of "$Id: gui.h,v 1.10 1999/12/11 14:33:20 mike Exp $".
  */
